--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "echo": "echo \"Hello, NPM\""
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^16.13.1"
+  }
 }
