--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "echo": "echo \"Hello, NPM\""
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "react": "^16.13.1"
+  },
+  "devDependencies": {
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
