lite-server 환경 세팅

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack && lite-server index.html"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "react": "^16.13.1"
   },
   "devDependencies": {
+    "lite-server": "^2.5.4",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   }
