--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1"
   },
   "devDependencies": {
+    "css-loader": "^4.3.0",
     "lite-server": "^2.5.4",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
