--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "css-loader": "^4.3.0",
+    "file-loader": "^6.1.0",
     "lite-server": "^2.5.4",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.2",
