webpack url-loader #1

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "file-loader": "^6.1.0",
     "lite-server": "^2.5.4",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   }
