--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack && lite-server index.html"
+    "build": "webpack && open ./dist/index.html"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
+    "html-webpack-plugin": "^4.5.0",
     "lite-server": "^2.5.4",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
