--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=development webpack && open ./dist/index.html"
+    "build": "NODE_ENV=development webpack && open ./dist/index.html",
+    "production": "NODE_ENV=production webpack"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "lite-server": "^2.5.4",
+    "mini-css-extract-plugin": "^0.11.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
