--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-arrow-functions": "^7.10.4",
     "@babel/plugin-transform-block-scoping": "^7.11.1",
     "@babel/plugin-transform-strict-mode": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
