--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@babel/plugin-transform-block-scoping": "^7.11.1",
     "@babel/plugin-transform-strict-mode": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^2.6.11",
     "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
