--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^2.6.11",
     "css-loader": "^4.3.0",
+    "eslint": "^7.10.0",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "lite-server": "^2.5.4",
