--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "core-js": "^2.6.11",
     "css-loader": "^4.3.0",
     "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "lite-server": "^2.5.4",
     "mini-css-extract-plugin": "^0.11.2",
+    "prettier": "^2.1.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
