--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=development webpack && open ./dist/index.html",
-    "production": "NODE_ENV=production webpack"
+    "production": "NODE_ENV=production webpack",
+    "lint": "eslint src --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "echo \"husky : 이것은 커밋 전에 출력됨\""
+    }
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +35,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.0",
     "lite-server": "^2.5.4",
     "mini-css-extract-plugin": "^0.11.2",
     "prettier": "^2.1.2",
