--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "echo \"husky : 이것은 커밋 전에 출력됨\""
+      "pre-commit": "eslint src --fix"
     }
   },
   "author": "",
