--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=development webpack && open ./dist/index.html",
     "production": "NODE_ENV=production webpack",
-    "lint": "eslint src --fix"
+    "lint": "eslint src --fix",
+    "start": "webpack-dev-server --progress"
   },
   "husky": {
     "hooks": {
@@ -46,6 +47,7 @@
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
