--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "connect-api-mocker": "^1.9.0",
     "core-js": "^2.6.11",
     "css-loader": "^4.3.0",
     "eslint": "^7.10.0",
