--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=development webpack && open ./dist/index.html",
-    "production": "NODE_ENV=production webpack",
+    "production": "NODE_ENV=production webpack --progress",
     "lint": "eslint src --fix",
     "start": "webpack-dev-server --progress"
   },
@@ -44,6 +44,7 @@
     "lint-staged": "^10.4.0",
     "lite-server": "^2.5.4",
     "mini-css-extract-plugin": "^0.11.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.1.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
