--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "connect-api-mocker": "^1.9.0",
+    "copy-webpack-plugin": "^6.1.1",
     "core-js": "^2.6.11",
     "css-loader": "^4.3.0",
     "eslint": "^7.10.0",
